fixed unwrapped voteboxes in clustering, added visual feedback for when voting, cleaner display of number of ideas in each cluster, fixed bug re: receiving droppable when first created

--- a/client/hcomp/clustering.css
+++ b/client/hcomp/clustering.css
@@ -34,6 +34,13 @@
   font-size:18px;
 }
 
+.mturk-cluster-interface .cluster-data {
+    margin-left:7px;
+    margin-right:7px;
+    font-size:12px;
+    padding-bottom:7px;
+}
+
 .mturk-cluster-interface #idealist, #clusterlist{
 	background-color: #f5f5f5;
 	list-style: none;
@@ -48,13 +55,13 @@
 	/*width: 50%;*/
 }
 .mturk-cluster-interface .idea-item .vote-box {
-  position: absolute;
+  /*position: absolute;
   right: 15px;
-  height: 1.5em;
+  height: 1.5em;*/
 }
 
 .mturk-cluster-interface .idea-item .vote-box .vote {
-  margin-right: 5px;
+  /*margin-right: 5px;*/
 }
 
 
